<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/test_time"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:hint="@string/test_round_set_notice"
        android:inputType="number" />
    <TextView
        android:id="@+id/test_round_record"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:visibility="gone"
        android:gravity="center"
        android:textColor="@android:color/holo_red_light"/>

    <TextView
        android:id="@+id/notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/button_start_test" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/clear_test_record" />
</LinearLayout>
