<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/layout_battery_state"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_test_notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp" />

            <Button
                android:id="@+id/record"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/record_button_name" />

            <Button
                android:id="@+id/stop"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/stop_button_name" />

            <Button
                android:id="@+id/play"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/play_button_name" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>